# Ransac

./: .gitignore  CMakeLists.txt  E. USAC vs OpenCV.txt  F. USAC vs OpenCV.txt  H. USAC vs OpenCV.txt  main.cpp  valgrind.sh
dataset/: Dataset.cpp  Dataset.h  GetImage.h  SaveGTModel.cpp
detector/: Reader.cpp  detector.cpp
generator/: generator.cpp  generator.h
helper/: Logging.h
helper/drawing/: DrawEpipolarLines.cpp  Drawing.h
include/nanoflann/: KDTreeVectorOfVectorsAdaptor.h
results/: prosac_fundamental.txt  prosac_line2d.txt  uniform_.txt  uniform_fundamental.txt  uniform_homography.txt  uniform_line2d.txt
results/EVD/: uniform_flo_grid_c_sz_50.csv  uniform_gc_grid_c_sz_50.csv  uniform_grid_c_sz_50.csv
test/: debug.cpp  statistical_results.h  test.cpp  test_affine_fitting.cpp  test_density_prosac.cpp  test_essential_fitting.cpp  test_fundamental_fitting.cpp  test_homography_fitting.cpp  test_line2d_fitting.cpp  test_neighbors_search.cpp  test_random_generator.h  test_utils.cpp  tests.h
usac/: model.hpp  precomp.hpp  sprt.hpp
usac/degeneracy/: degeneracy.cpp  degeneracy.hpp  fundamental_degeneracy.hpp
usac/estimator/: affine_estimator.hpp  essential_estimator.hpp  estimator.hpp  fundamental_estimator.hpp  homography_estimator.hpp  line2d_estimator.hpp
usac/local_optimization/: graphcut.cpp  graphcut.hpp  greedy_local_optimization.hpp  inner_local_optimization.hpp  irls.hpp  iterative_local_optimization.hpp  local_optimization.hpp  sorted_lo.hpp
usac/quality/: lms_quality.h  lms_quality.hpp  mlesac_quality.hpp  msac_quality.hpp  quality.hpp  ransac_quality.hpp
usac/random_generator/: array_random_generator.hpp  uniform_random_generator.hpp
usac/ransac/: init.cpp  init.hpp  ransac.cpp  ransac.hpp  ransac_output.hpp
usac/sampler/: evsac_sampler.hpp  napsac_sampler.hpp  progressive_sampler.hpp  prosac_napsac_sampler.hpp  prosac_sampler.hpp  prosac_simple_sampler.hpp  sampler.hpp  uniform_sampler.hpp
usac/termination_criteria/: prosac_termination_criteria.hpp  standard_termination_criteria.hpp  termination_criteria.hpp
(+16 files in other folders)
